k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-app
  namespace: ecommerce
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ecommerce-app
  template:
    metadata:
      labels:
        app: ecommerce-app
    spec:
      containers:
        - name: app
          image: anhquoc1809/ecommerce.app:latest # <--- CHÚ Ý: Thay thế image của bạn
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-app
spec:
  selector:
    app: ecommerce-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
