k8s/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ecommerce-db
  namespace: ecommerce
spec:
  serviceName: 'ecommerce-db'
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-db
  template:
    metadata:
      labels:
        app: ecommerce-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-db
spec:
  selector:
    app: ecommerce-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
