k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
  annotations:
    kubernetes.io/ingress.class: 'nginx' # Đảm bảo bạn đã cài đặt Nginx Ingress Controller
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: app.lvh.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-frontend
                port:
                  number: 80
          - path: /api(.*)
            pathType: Prefix
            backend:
              service:
                name: ecommerce-app
                port:
                  number: 8080
